添加代理模式

--- a/DesignPattern/DesignPattern.vcxproj
+++ b/DesignPattern/DesignPattern.vcxproj
@@ -129,7 +129,9 @@
     <ClInclude Include="absfactory.hpp" />
     <ClInclude Include="factory.hpp" />
     <ClInclude Include="observer.hpp" />
+    <ClInclude Include="proxy.hpp" />
     <ClInclude Include="singleton.hpp" />
+    <ClInclude Include="templatemethod.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
