--- a/DesignPattern/DesignPattern.vcxproj
+++ b/DesignPattern/DesignPattern.vcxproj
@@ -127,12 +127,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="absfactory.hpp" />
+    <ClInclude Include="bulider.hpp" />
     <ClInclude Include="factory.hpp" />
     <ClInclude Include="mediator.hpp" />
     <ClInclude Include="memento.hpp" />
     <ClInclude Include="observer.hpp" />
     <ClInclude Include="proxy.hpp" />
     <ClInclude Include="singleton.hpp" />
+    <ClInclude Include="strategy.hpp" />
     <ClInclude Include="templatemethod.hpp" />
     <ClInclude Include="visitor.hpp" />
   </ItemGroup>
