--- a/Concurrency/Concurrency.vcxproj
+++ b/Concurrency/Concurrency.vcxproj
@@ -129,9 +129,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functionobject.hpp" />
+    <ClInclude Include="future.hpp" />
     <ClInclude Include="lockdead.hpp" />
     <ClInclude Include="observe.hpp" />
     <ClInclude Include="producerconsumer.hpp" />
+    <ClInclude Include="promise.hpp" />
     <ClInclude Include="sync.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
