--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="templateparam.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="string.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
