--- a/DesignPattern/DesignPattern.vcxproj.filters
+++ b/DesignPattern/DesignPattern.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="adapter.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="composite.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
