--- a/DesignPattern/DesignPattern.vcxproj.filters
+++ b/DesignPattern/DesignPattern.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="composite.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="chain.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
