--- a/DesignPattern/DesignPattern.vcxproj.filters
+++ b/DesignPattern/DesignPattern.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="chain.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="facade.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
