添加map测试代码

--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bind.hpp" />
+    <ClInclude Include="map.hpp" />
     <ClInclude Include="move.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="set.hpp" />
