添加algorithm测试代码

--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="map.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="algorithm.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CPlusPlus.rc">
