--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="algorithm.hpp" />
     <ClInclude Include="bind.hpp" />
     <ClInclude Include="map.hpp" />
     <ClInclude Include="move.hpp" />
