添加类型萃取测试代码

--- a/CPlusPlus/CPlusPlus.vcxproj
+++ b/CPlusPlus/CPlusPlus.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="set.hpp" />
     <ClInclude Include="string.hpp" />
     <ClInclude Include="templateparam.hpp" />
+    <ClInclude Include="typetraits.hpp" />
     <ClInclude Include="vector.hpp" />
   </ItemGroup>
   <ItemGroup>
