--- a/CPlusPlus/CPlusPlus.vcxproj.filters
+++ b/CPlusPlus/CPlusPlus.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="algorithm.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="typetraits.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CPlusPlus.rc">
